# pdft

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: benchmarks-smoke.yml  ci.yml  publish.yml  verify-upstream-pin.yml
benchmarks/: analyze.py  baselines.py  config.py  evaluation.py  harness.py  run_div2k_8q_blocked_rich.py  run_quickdraw.py
benchmarks/diagrams/: README.md  circuits.typ
benchmarks/scripts/: cpu_vs_gpu_batched.py
benchmarks/tests/: test_baselines.py  test_config.py  test_quickdraw_smoke_e2e.py
docs/superpowers/plans/: 2026-04-24-pdft-phase1.md  2026-04-25-pdft-gpu-benchmarks.md  2026-04-26-src-modular-refactor.md
docs/superpowers/specs/: 2026-04-24-pdft-migration-design.md  2026-04-25-pdft-gpu-benchmarks-design.md  2026-04-26-src-modular-refactor-design.md
examples/: basis_demo.py  mera_demo.py  optimizer_benchmark.py
reference/: README.md
reference/goldens/: adam_trajectory_4x4.npz  basis_roundtrip.npz  basis_roundtrip_hash.txt  compression_roundtrip_4x4.npz  entangled_qft_4x4.npz  ft_mat_roundtrip.npz  loss_values.npz  manifest.json  manifold_project_retract.npz  mera_4x4.npz  phase_extraction_3x3.npz  qft_basis_trained.json  qft_code_16x16.npz  qft_code_4x4.npz  tebd_4x4.npz  train_trajectory_4x4.npz  train_trajectory_4x4_long.npz
reference/julia/: Manifest.toml  Project.toml  generate_goldens.jl
src/pdft/: __init__.py  _circuit.py  basis.py  block_basis.py  circuit_viz.py  compression.py  dct_basis.py  einsum_cache.py  entangled_qft.py  io_json.py  loss.py  manifolds.py  mera.py  optimizers.py  profiling.py  qft.py  real_rich_basis.py  rich_basis.py  tebd.py  training.py  viz.py
src/pdft/bases/: __init__.py  base.py
src/pdft/circuit/: __init__.py  builder.py
src/pdft/io/: __init__.py  (+2 more)
tests/: conftest.py  test_basis.py  test_basis_seeded_init.py  test_block_basis.py  test_compression.py  test_dct_basis.py  test_einsum_cache.py  test_io_json.py  test_loss.py  test_manifolds.py  test_new_bases.py  test_optimizers.py  test_optimizers_adam.py  test_parity_adam.py  test_parity_compression.py  test_parity_io_json.py  test_parity_long_run.py  test_parity_loss.py  test_parity_manifolds.py  test_parity_new_bases.py  test_parity_qft.py  test_parity_scale.py  test_parity_training.py  test_phase_extraction.py  test_profiling.py  test_qft.py  test_rich_basis.py  test_smoke.py  test_training.py  test_training_batched.py  test_training_integration.py  test_viz.py
tests/bases/: conftest.py  test_base.py  test_new_bases.py  test_phase_extraction.py
tests/circuit/: test_cache.py  test_h_inverse_leg_swap.py  test_high_qubit_circuit.py  test_legacy_builder.py
tests/io/: conftest.py  test_compression.py  test_serialize.py
tests/optimizers/: conftest.py  test_gd.py
tests/parity/: conftest.py  test_adam.py  test_compression.py  test_long_run.py  test_loss.py  test_manifolds.py  test_new_bases.py  test_qft.py  test_scale.py  test_serialize.py  test_training.py
tests/training/: conftest.py  test_batched.py  test_eval_loop.py  test_integration.py  test_single.py
tests/viz/: test_loss.py
(+25 files in other folders)
