[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdft"
version = "0.0.0"
description = "Python port of ParametricDFT.jl: learning parametric quantum Fourier transforms via manifold optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "zazabap" }]
keywords = ["quantum", "dft", "fourier", "variational", "manifold-optimization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/zazabap/pdft"
Issues = "https://github.com/zazabap/pdft/issues"
Upstream = "https://github.com/nzy1997/ParametricDFT.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/pdft"]

[tool.ruff]
line-length = 100
target-version = "py310"
