[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdft"
version = "0.2.1"
description = "Python port of ParametricDFT.jl: learning parametric quantum Fourier transforms via manifold optimization."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "zazabap" }]
keywords = ["quantum", "dft", "fourier", "variational", "manifold-optimization", "jax"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.10.0",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.5",
    "numpy>=1.26",
    "jaxtyping>=0.2",
    "matplotlib>=3.8",
]
plot = ["matplotlib>=3.8"]
gpu = ["jax[cuda12]>=0.10.0"]

[project.urls]
Homepage = "https://github.com/zazabap/pdft"
Issues = "https://github.com/zazabap/pdft/issues"
Upstream = "https://github.com/nzy1997/ParametricDFT.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/pdft"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jax.*",
]
markers = [
    "parity: byte-compare against Julia-generated goldens (slower; deselect with -m 'not parity')",
    "slow: long-running tests (>30s); deselect with -m 'not slow' for fast iteration",
]
